[package]
name = "meili"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <voidentente@paranoici.org>"]
repository = "https://github.com/voidentente/kumo"

[dependencies.bevy]
version = "0.10.1"
default-features = false

[dependencies.meilisearch-sdk]
version = "0.22.1"

[dependencies.serde]
version = "1.0.158"
features = ["derive"]

[dependencies.futures]
version = "0.3.27"

[dependencies.eprng]
version = "0.1.1"
default-features = false

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
]